--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "config": "^3.3.12",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
     "build": "tsc",
@@ -22,6 +24,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "@types/sqlite3": "^3.1.11",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
